--- a/Notebook_Pos_Self_Salience_APA.tex
+++ b/Notebook_Pos_Self_Salience_APA.tex
@@ -368,6 +368,17 @@ In this experiment, the advantage of good-self condition can only be disentangle
 
 In this part, we analyzed the results from experiment 5, which included positive, neutral, and negative valence from four different domains: morality, emotion, aesthetics of human, and aesthetics of scene. We found interaction between valence and domain for both \emph{d} prime and RT (match trials). A common pattern appeared in all four domains: each domain showed a binary results instead of gradient on both \emph{d} prime and RT. For morality, aesthetics of human, and aesthetics of scene, the positive conditions had advantages over both neutral and negative conditions (greater \emph{d} prime and faster RT), and neutral and negative conditions didn't differ from each other. But for the emotional stimuli, it was the positive and neutral had advantage over negative conditions, while positive and neutral conditions were not significantly different. See supplementary materials for detailed statistics. Also note that the effect size in moral domain is smaller than the aesthetic domains (beauty of people and beauty of scene). See Figure \ref{fig:plot-exp5-effect}.
 
+\hypertarget{self-reported-personal-distance}{%
+\subsection{Self-reported personal distance}\label{self-reported-personal-distance}}
+
+\begin{figure}
+\centering
+\includegraphics{Notebook_Pos_Self_Salience_APA_files/figure-latex/plot-person-dist-1.pdf}
+\caption{\label{fig:plot-person-dist}Self-rated personal distance}
+\end{figure}
+
+See Figure \ref{fig:plot-person-dist}.
+
 \hypertarget{correlation-analyses}{%
 \subsection{Correlation analyses}\label{correlation-analyses}}
 
