plot trace using R

--- a/HDDM/GoodSelf_HDDM_extract_data.ipynb
+++ b/HDDM/GoodSelf_HDDM_extract_data.ipynb
@@ -291,7 +291,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -377,8 +377,27 @@
     "    print('chain', i, df1a_grp_trace.shape)\n",
     "    df1a_grp_traces.append(df1a_grp_trace)\n",
     "df1a_grp_traces = pd.concat(df1a_grp_traces)    \n",
-    "# df1a_grp_traces.to_csv('df1a_group_traces.csv', index=False) # save to csv\n",
+    "df1a_grp_traces.to_csv('df1a_group_traces.csv', index=False) # save to csv\n",
     "# df1a_grp_traces.shape\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "(4000, 23)\n"
+     ]
+    }
+   ],
+   "source": [
+    "df1a_grp_traces = df1a_models_comb.get_group_traces()\n",
+    "print(df1a_grp_traces.shape)\n",
+    "df1a_grp_traces.to_csv('df1a_group_traces.csv', index=False) # save to csv"
    ]
   },
   {
